--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -147,7 +147,7 @@
           href: platform/personal-data-mgmt.md
         - name: アプリケーション データの収集、保持、保存
           href: app/data-retention-privacy.md
-    - name: アラート
+    - name: 警告
       items:
         - name: 概要
           href: platform/alerts-overview.md
@@ -210,33 +210,13 @@
           href: platform/diagnostic-settings.md
     - name: Log Analytics
       items:
-        - name: Workspaces
-          items:
-            - name: ワークスペース デプロイの設計
-              href: platform/design-logs-deployment.md
-            - name: ワークスペースの作成
-              items:
-                - name: Azure Portal の使用
-                  href: learn/quick-create-workspace.md
-                - name: Azure CLI の使用
-                  href: learn/quick-create-workspace-cli.md
-                - name: PowerShell の使用
-                  href: platform/powershell-workspace-configuration.md
-                - name: Resource Manager テンプレートの使用
-                  href: platform/template-workspace-configuration.md
-            - name: ワークスペースの削除と復旧
-              href: platform/delete-workspace.md
-            - name: ワークスペースの移動
-              href: platform/move-workspace.md
-            - name: サービス プロバイダー向けの設計
-              href: platform/service-providers.md
-            - name: アクセスを管理する
-              href: platform/manage-access.md
         - name: ログ クエリの概要
           displayname: 'log query, log queries, query, queries'
           href: log-query/log-query-overview.md
         - name: シンプルなログ エクスペリエンス
           href: log-query/simple-logs.md
+        - name: 監査ログ クエリ
+          href: log-query/query-audit.md
         - name: チュートリアル
           items:
             - name: Log Analytics のチュートリアル
@@ -315,6 +295,26 @@
               href: log-query/query-optimization.md
             - name: テキスト データの解析
               href: log-query/parse-text.md
+        - name: Workspaces
+          items:
+            - name: ワークスペース デプロイの設計
+              href: platform/design-logs-deployment.md
+            - name: ワークスペースの作成
+              items:
+                - name: Azure Portal の使用
+                  href: learn/quick-create-workspace.md
+                - name: Azure CLI の使用
+                  href: learn/quick-create-workspace-cli.md
+                - name: PowerShell の使用
+                  href: platform/powershell-workspace-configuration.md
+            - name: ワークスペースの削除と復旧
+              href: platform/delete-workspace.md
+            - name: ワークスペースの移動
+              href: platform/move-workspace.md
+            - name: サービス プロバイダー向けの設計
+              href: platform/service-providers.md
+            - name: アクセスを管理する
+              href: platform/manage-access.md
     - name: メトリックス エクスプローラー
       items:
         - name: メトリックス エクスプローラーの概要
@@ -1132,24 +1132,28 @@
           href: platform/workbooks-visualizations.md
         - name: データ ソース
           href: platform/workbooks-data-sources.md
-        - name: Azure Resource Manager を使用したデプロイ
-          href: platform/workbooks-automate.md
+        - name: パラメーター
+          items:
+            - name: パラメーターの概要
+              href: platform/workbooks-parameters.md
+            - name: ドロップダウン パラメーター
+              href: platform/workbooks-dropdowns.md
+            - name: インタラクティブ パラメーター
+              href: platform/workbooks-interactive.md
+            - name: タイム パラメーター
+              href: platform/workbooks-time.md
+            - name: テキスト パラメーター
+              href: platform/workbooks-text.md
         - name: 構成
           items:
             - name: アクセス制御
               href: platform/workbooks-access-control.md
-            - name: パラメーター
-              items:
-                - name: パラメーターの概要
-                  href: platform/workbooks-parameters.md
-                - name: ドロップダウン パラメーター
-                  href: platform/workbooks-dropdowns.md
-                - name: インタラクティブ パラメーター
-                  href: platform/workbooks-interactive.md
-                - name: タイム パラメーター
-                  href: platform/workbooks-time.md
-                - name: テキスト パラメーター
-                  href: platform/workbooks-text.md
+            - name: Azure Resource Manager を使用したデプロイ
+              href: platform/workbooks-automate.md
+            - name: 別のリージョンへのブックの移動
+              href: platform/workbooks-move-region.md
+            - name: 別のリージョンへのブック テンプレートの移動
+              href: platform/workbook-templates-move-region.md
         - name: ビューからブックへの変換
           items:
             - name: 変換の概要
