--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -347,6 +347,8 @@
                   href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Azure Storage REST API の使用
                   href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 共有キーによる承認の防止
+                  href: ../common/shared-key-authorization-prevent.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Shared Access Signature (SAS) によるアクセスの委任
               items:
                 - name: ユーザーの委任 SAS の作成
@@ -664,7 +666,7 @@
           href: data-lake-storage-best-practices.md
         - name: クエリの高速化
           href: data-lake-storage-query-acceleration.md
-        - name: Architecture
+        - name: アーキテクチャ
           items:
             - name: Hadoop 用 Azure BLOB ファイル システム ドライバー
               href: data-lake-storage-abfs-driver.md
@@ -739,6 +741,8 @@
               href: data-lake-storage-explorer.md
             - name: Hadoop ファイル システム CLI
               href: data-lake-storage-use-hdfs-data-lake-storage.md
+            - name: ACL を再帰的に設定する
+              href: recursive-access-control-lists.md
         - name: クエリ
           items:
             - name: クエリの高速化によるデータのフィルター処理
@@ -747,7 +751,7 @@
           items:
             - name: AzCopy
               items:
-                - name: はじめに
+                - name: 作業開始
                   href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Data Lake Storage の使用
                   href: ../common/storage-use-azcopy-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
