--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -99,10 +99,14 @@
           href: troubleshoot-guide-windows-boot-manager-menu.md
         - name: 更新が原因で VM が応答しない
           href: unresponsive-vm-apply-windows-update.md
+        - name: 監査構成ポリシーの適用時に VM が応答しない
+          href: vm-unresponsive-applying-audit-configuration-policy.md
         - name: グループ ポリシーの適用時に VM が応答しない
           href: unresponsive-vm-apply-group-policy.md
         - name: セキュリティ ポリシーの適用時に VM が応答しない
           href: unresponsive-vm-apply-security-policy.md
+        - name: Windows STOP エラー - 無効なシステム構成情報
+          href: windows-stop-error-bad-system-config-info.md
         - name: Windows STOP エラー - メモリなし状態
           href: troubleshoot-windows-stop-error.md
 - name: VM に接続できない
