--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -329,6 +329,28 @@
       items:
         - name: データ収集ルール
           href: platform/data-collection-rule-overview.md
+        - name: エージェントのデータ ソース
+          items:
+            - name: 概要
+              href: platform/agent-data-sources.md
+            - name: Windows イベント
+              href: platform/data-sources-windows-events.md
+            - name: カスタム JSON データ
+              href: platform/data-sources-json.md
+            - name: CollectD のパフォーマンス データ
+              href: platform/data-sources-collectd.md
+            - name: syslog
+              href: platform/data-sources-syslog.md
+            - name: パフォーマンス カウンター
+              href: platform/data-sources-performance-counters.md
+            - name: Linux アプリケーション パフォーマンス
+              href: platform/data-sources-linux-applications.md
+            - name: IIS ログ
+              href: platform/data-sources-iis-logs.md
+            - name: カスタム ログ
+              href: platform/data-sources-custom-logs.md
+            - name: カスタム フィールド
+              href: platform/custom-fields.md
         - name: カスタム メトリック
           items:
             - name: カスタム メトリック
@@ -361,6 +383,24 @@
             - name: データ コレクション
               displayname: 'data collection rule,Azure Monitor agent'
               href: platform/data-collection-rule-azure-monitor-agent.md
+        - name: Log Analytics エージェント
+          items:
+            - name: 概要
+              href: platform/log-analytics-agent.md
+            - name: Windows エージェント
+              href: platform/agent-windows.md
+            - name: Linux エージェント
+              href: platform/agent-linux.md
+            - name: Windows 用の VM 拡張機能
+              href: ../virtual-machines/extensions/oms-windows.md?toc=/azure/azure-monitor/toc.json
+            - name: Linux 用の VM 拡張機能
+              href: ../virtual-machines/extensions/oms-linux.md?toc=/azure/azure-monitor/toc.json
+            - name: Log Analytics ゲートウェイ
+              href: platform/gateway.md
+            - name: エージェント管理
+              href: platform/agent-manage.md
+            - name: エージェントの正常性
+              href: insights/solution-agenthealth.md
         - name: Azure Diagnostics 拡張機能
           items:
             - name: 概要
@@ -403,46 +443,6 @@
                   href: ../virtual-machines/extensions/diagnostics-linux.md?toc=/azure/azure-monitor/toc.json
                 - name: Telegraf を使用したメトリックの収集
                   href: platform/collect-custom-metrics-linux-telegraf.md
-        - name: Log Analytics エージェント
-          items:
-            - name: 概要
-              href: platform/log-analytics-agent.md
-            - name: Windows エージェント
-              href: platform/agent-windows.md
-            - name: Linux エージェント
-              href: platform/agent-linux.md
-            - name: Windows 用の VM 拡張機能
-              href: ../virtual-machines/extensions/oms-windows.md?toc=/azure/azure-monitor/toc.json
-            - name: Linux 用の VM 拡張機能
-              href: ../virtual-machines/extensions/oms-linux.md?toc=/azure/azure-monitor/toc.json
-            - name: Log Analytics ゲートウェイ
-              href: platform/gateway.md
-            - name: エージェント管理
-              href: platform/agent-manage.md
-            - name: エージェントの正常性
-              href: insights/solution-agenthealth.md
-            - name: データ ソース
-              items:
-                - name: 概要
-                  href: platform/agent-data-sources.md
-                - name: Windows イベント
-                  href: platform/data-sources-windows-events.md
-                - name: カスタム JSON データ
-                  href: platform/data-sources-json.md
-                - name: CollectD のパフォーマンス データ
-                  href: platform/data-sources-collectd.md
-                - name: syslog
-                  href: platform/data-sources-syslog.md
-                - name: パフォーマンス カウンター
-                  href: platform/data-sources-performance-counters.md
-                - name: Linux アプリケーション パフォーマンス
-                  href: platform/data-sources-linux-applications.md
-                - name: IIS ログ
-                  href: platform/data-sources-iis-logs.md
-                - name: カスタム ログ
-                  href: platform/data-sources-custom-logs.md
-                - name: カスタム フィールド
-                  href: platform/custom-fields.md
         - name: トラブルシューティング
           items:
             - name: Log Analytics VM 拡張機能
