--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -89,7 +89,7 @@
           href: event-hubs-output.md
         - name: Power BI
           href: power-bi-output.md
-        - name: テーブル ストレージ
+        - name: Table ストレージ
           href: table-storage-output.md
         - name: Service Bus キュー
           href: service-bus-queues-output.md
@@ -186,6 +186,8 @@
               displayName: 'managed identity, identities, authenticate'
         - name: データを暗号化する
           href: data-protection.md
+        - name: geo 冗長
+          href: geo-redundancy.md
     - name: ソリューションを構築する
       items:
         - name: Twitter センチメントの分析
