--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -212,16 +212,10 @@
               href: application-sign-in-unexpected-user-consent-prompt.md
             - name: ユーザーの同意エラー
               href: application-sign-in-unexpected-user-consent-error.md
-            - name: カスタム ポータルからのサインインに関する問題
-              href: application-sign-in-other-problem-deeplink.md
-            - name: アクセス パネルからのサインインに関する問題
+            - name: マイ アプリからのサインインに関する問題
               href: application-sign-in-other-problem-access-panel.md
             - name: アプリケーションのサインイン ページでのエラー
               href: application-sign-in-problem-application-error.md
-            - name: パスワード シングル サインオンに関する問題 - ギャラリー以外のアプリ
-              href: application-sign-in-problem-password-sso-non-gallery.md
-            - name: パスワード シングル サインオンに関する問題 - ギャラリー アプリ
-              href: application-sign-in-problem-password-sso-gallery.md
             - name: Microsoft アプリへのサインインに関する問題
               href: application-sign-in-problem-first-party-microsoft.md
             - name: フェデレーション シングル サインオンに関する問題 - ギャラリー以外のアプリ
@@ -232,14 +226,12 @@
               href: application-sign-in-problem-custom-dev.md
         - name: シングル サインオンのトラブルシューティング
           items:
+            - name: パスワードベースのシングル サインオンのトラブルシューティング
+              href: troubleshoot-password-based-sso.md
             - name: フェデレーションの構成の一般的な問題 - ギャラリー アプリ
               href: configure-federated-single-sign-on-gallery-applications-problems.md
             - name: フェデレーションの構成の一般的な問題 - ギャラリー以外のアプリ
               href: configure-federated-single-sign-on-non-gallery-applications-problems.md
-            - name: パスワードの構成の一般的な問題 - ギャラリー アプリ
-              href: configure-password-single-sign-on-gallery-applications-problems.md
-            - name: パスワードの構成の一般的な問題 - ギャラリー以外のアプリ
-              href: configure-password-single-sign-on-non-gallery-applications-problems.md
         - name: アプリの一覧および割り当てのトラブルシューティング
           items:
             - name: テナントのアプリケーション一覧の管理
@@ -248,16 +240,10 @@
               href: ways-users-get-assigned-to-applications.md
         - name: マイ アプリのトラブルシューティング
           items:
-            - name: ブラウザー拡張機能の管理
-              href: manage-access-panel-browser-extension.md
             - name: アプリが表示されない
               href: access-panel-troubleshoot-application-not-appearing.md
             - name: 予期しないアプリが表示される
               href: access-panel-troubleshoot-unexpected-application.md
-            - name: サインインできない
-              href: access-panel-troubleshoot-web-sign-in-problem.md
-            - name: セルフサービス アプリ アクセスの使用時のエラー
-              href: access-panel-troubleshoot-self-service-access.md
         - name: オンプレミス アプリのトラブルシューティング
           items:
             - name: アプリケーション プロキシのトラブルシューティング
