--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -570,6 +570,8 @@
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Storage Explorer のセキュリティ
               href: ../common/storage-explorer-security.md
+            - name: Storage Explorer BLOB のバージョン管理
+              href: ../common/storage-explorer-blob-versioning.md
             - name: Storage Explorer のサポート ポリシーとライフサイクル
               href: ../common/storage-explorer-support-policy-lifecycle.md
             - name: ストレージ エクスプローラーのアクセシビリティ
@@ -850,6 +852,8 @@
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Storage Explorer のセキュリティ
               href: ../common/storage-explorer-security.md
+            - name: Storage Explorer BLOB のバージョン管理
+              href: ../common/storage-explorer-blob-versioning.md
             - name: Storage Explorer のサポート ポリシーとライフサイクル
               href: ../common/storage-explorer-support-policy-lifecycle.md
             - name: ストレージ エクスプローラーのアクセシビリティ
