--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -1,6 +1,7 @@
 - name: Azure Data Share のドキュメント
   href: index.yml
 - name: 概要
+  expanded: true
   items:
     - name: Azure Data Share とは
       href: overview.md
@@ -36,6 +37,11 @@
       href: samples-powershell.md
 - name: 操作方法ガイド
   items:
+    - name: ソース別にデータを共有および受信する
+      items:
+        - name: Azure Data Explorer からの共有
+          href: /azure/data-explorer/data-share
+          maintainContext: true
     - name: モニター
       href: how-to-monitor.md
     - name: トラブルシューティング
@@ -54,9 +60,6 @@
       href: security.md
     - name: 障害復旧
       href: disaster-recovery.md
-    - name: Azure Data Explorer のデータの共有
-      href: /azure/data-explorer/data-share
-      maintainContext: true
 - name: リファレンス
   items:
     - name: .NET
