commit translated contents

--- a/articles/active-directory/conditional-access/TOC.yml
+++ b/articles/active-directory/conditional-access/TOC.yml
@@ -41,6 +41,8 @@
       href: location-condition.md
     - name: What if ツール
       href: what-if-tool.md
+    - name: 継続的アクセス評価
+      href: concept-continuous-access-evaluation.md
     - name: カスタム コントロール
       href: controls.md
     - name: クラシック ポリシーの移行
