--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -94,6 +94,8 @@
       href: configure-automatic-updates.md
     - name: 言語パックをインストールする
       href: language-packs.md
+    - name: Azure Advisor を使用する
+      href: azure-advisor.md
     - name: 推奨事項を解決する
       href: azure-advisor-recommendations.md
 - name: 概念
