--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -82,11 +82,11 @@
 - name: リファレンス
   items:
     - name: Azure CLI
-      href: /cli/azure/managedservices?view=azure-cli-latest
+      href: /cli/azure/managedservices
     - name: Azure PowerShell
-      href: /powershell/module/az.managedservices/?view=azps-2.4.0#managed_services
+      href: /powershell/module/az.managedservices#managed_services
     - name: Azure SDK for .NET
-      href: /dotnet/api/Microsoft.Azure.Management.ManagedServices?view=azure-dotnet
+      href: /dotnet/api/Microsoft.Azure.Management.ManagedServices
     - name: Azure SDK for .NET (NuGet)
       href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.ManagedServices/'
     - name: Azure SDK for Python
@@ -103,5 +103,5 @@
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 料金計算ツール
       href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: UserVoice
+    - name: 製品フィードバック
       href: 'https://feedback.azure.com/forums/922753'
