--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -107,12 +107,12 @@
           href: update-regulatory-compliance-packages.md
     - name: VM の脆弱性をスキャンする
       items:
-        - name: 脆弱性スキャンの概要
-          href: security-center-vulnerability-assessment-recommendations.md
-        - name: VM 用の統合された脆弱性スキャナー
-          href: built-in-vulnerability-assessment.md
-        - name: 外部スキャナーの使用
-          href: partner-vulnerability-assessment.md
+        - name: 統合された脆弱性スキャナーを VM にデプロイする
+          href: deploy-vulnerability-assessment-vm.md
+        - name: BYOL 脆弱性ソリューションを VM にデプロイする
+          href: deploy-vulnerability-assessment-byol-vm.md
+        - name: VM 上の脆弱性を確認して修復する
+          href: remediate-vulnerability-findings-vm.md
     - name: 脅威の防止の構成とアラートの処理
       items:
         - name: セキュリティ アラートの管理
