--- a/articles/active-directory/hybrid/TOC.yml
+++ b/articles/active-directory/hybrid/TOC.yml
@@ -31,7 +31,7 @@
         - name: Azure AD Connect と Connect Health とは
           href: whatis-azure-ad-connect.md
         - name: 適切な認証の選択
-          href: 'https://docs.microsoft.com/azure/security/fundamentals/choose-ad-authn'
+          href: ./choose-ad-authn.md
         - name: ID 同期と重複属性の回復性
           href: how-to-connect-syncservice-duplicate-attribute-resiliency.md
     - name: パスワード ハッシュの同期
@@ -339,7 +339,7 @@
     - name: Azure AD パススルー認証エージェントのバージョン履歴
       href: reference-connect-pta-version-history.md
     - name: コネクタのバージョンの
-      href: reference-connect-sync-connector-version-history.md
+      href: /microsoft-identity-manager/reference/microsoft-identity-manager-2016-connector-version-history
     - name: アカウントとアクセス許可
       href: reference-connect-accounts-permissions.md
     - name: Azure AD Connect の FAQ
