--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -161,7 +161,8 @@
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.cache/allversions
     - name: Azure Policy の組み込み
-      href: ./policy-samples.md
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
     - name: Redis コマンド
       href: 'https://redis.io/commands#'
 - name: リソース
