--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -26,11 +26,7 @@
       href: resource-manager-template.md
     - name: 診断ログ
       href: diagnostic-logging.md
-- name: サンプル
-  items:
-    - name: Azure Policy の組み込み
-      href: ./policy-samples.md
-- name: セキュリティ
+- name: Security
   items:
     - name: Cognitive Services のセキュリティ
       href: cognitive-services-security.md
@@ -86,6 +82,11 @@
           href: ./big-data/recipes/anomaly-detection.md
         - name: 'レシピ:アート エクスプローラー'
           href: ./big-data/recipes/art-explorer.md
+- name: リファレンス
+  items:
+    - name: Azure Policy の組み込み
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: リソース
   items:
     - name: Azure のロードマップ
