--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -74,9 +74,6 @@
       href: sample-scripts-azure-cli.md
     - name: Java 接続プール
       href: sample-scripts-java-connection-pooling.md
-    - name: Azure Policy の組み込み
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: DB とサーバー
@@ -332,6 +329,9 @@
       href: /azure/templates/microsoft.dbformysql/allversions
     - name: 管理ストアド プロシージャ
       href: reference-stored-procedures.md
+    - name: Azure Policy の組み込み
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
 - name: リソース
   items:
     - name: デプロイ テンプレート
