--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -47,11 +47,6 @@
       href: spring-cloud-tutorial-managed-identities-key-vault.md
     - name: 仮想ネットワークに Azure Spring Cloud をデプロイする
       href: spring-cloud-tutorial-deploy-in-azure-virtual-network.md
-- name: サンプル
-  items:
-    - name: Azure Policy の組み込み
-      displayName: 'samples, policies, definitions'
-      href: ./policy-samples.md
 - name: 概念
   items:
     - name: アプリとデプロイについて
@@ -126,3 +121,6 @@
       href: spring-cloud-faq.md
     - name: REST API リファレンス
       href: 'https://docs.microsoft.com/rest/api/azurespringclould/'
+    - name: Azure Policy の組み込み
+      displayName: 'samples, policies, definitions'
+      href: ./policy-reference.md
