--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -166,6 +166,8 @@
       href: /cli/azure/ext/desktopvirtualization/?view=azure-cli-latest
     - name: Azure シナリオ例
       href: /azure/architecture/example-scenario/wvd/windows-virtual-desktop
+    - name: メール検出
+      href: /windows-server/remote/remote-desktop-services/rds-email-discovery
 - name: リソース
   items:
     - name: PowerShell
